corrected overflow svg

--- a/src/styles/carousel.scss
+++ b/src/styles/carousel.scss
@@ -35,6 +35,9 @@
   margin: 4em auto;
   display: flex;
   justify-content: space-between;
+  @media only screen and (min-width: 992px) {
+    background: orange;
+  }
 }
 
 .slider-card {
